--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
             text-align: center;
             width: 80%;
             max-width: 600px;
+            max-height: 80vh; 
+            overflow-y: auto;
+            
         }
 
         h1 {
